--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionBancaire
 excludes=
 file.reference.mysql-connector-j-8.0.33.jar=D:\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=C:\\Users\\i Ilo\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
